@@ -1,8 +1,9 @@
 [B]2.1.X[/B]
-- Utilize kodi-six to improve further Python 2/3 compatibility
+- Utilize kodi-six to further improve Python 2/3 compatibility
 - Added "builtin" function into directory module, which can execute various builtin commands with arguments
 - Added various supplementary fuctions into control module
 - Added argv parameter to directory module's function to work with Leia's new python caching (requires testing)
+- Tweaked open settings window & set focus methods
 - Various other tweaks
 
 [B]2.0.X[/B]
